# veto-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_EN.md  cspell.json  flake.nix  justfile
.github/workflows/: ci.yml
config/: veri.toml.example  veto.toml.example
crates/veri-cli/: Cargo.toml
crates/veri-cli/src/: main.rs
crates/veri-config/: Cargo.toml
crates/veri-config/src/: lib.rs  types.rs
crates/veri-core/: Cargo.toml
crates/veri-core/src/: lib.rs  model.rs  runner.rs
crates/veto-cli/: Cargo.toml
crates/veto-cli/src/: main.rs
crates/veto-config/: Cargo.toml
crates/veto-config/src/: lib.rs  types.rs
crates/veto-core/: Cargo.toml
crates/veto-core/src/: lib.rs
crates/veto-core/src/checks/: entropy_guard.rs  mod.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: 00_quickstart.md  01_concepts.md  02_config_reference.md  03_cli_reference.md  04_recipes.md  05_troubleshooting.md  99_release_checklist.md  ARCHITECTURE.md  PRECOMMIT.md  ROADMAP.md  SECURITY.md  promptbook.md
infra/postgres/: README.md  docker-compose.yml
