[workspace]
resolver = "2"
members = [
  "crates/veri-core",
  "crates/veri-config",
  "crates/veri-cli",
  "crates/xtask",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mt4110/veri-rs"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
