[package]
name = "veto-cli"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "veto"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
veto-core = { path = "../veto-core" }
veto-config = { path = "../veto-config" }
